# matlab-cpp-wrapper

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/gpu/: CMakeLists.txt
examples/gpu/matlab/mex/: mexGPUExample.cu
examples/matlab/mex/: arrayProduct.cpp  arraySize.cpp  mexatexit.cpp  mexcallmatlab.cpp  mexcallmatlabwithtrap.cpp  mexeval.cpp  mexevalstring.cpp  mexfeval.cpp  mexfunction.cpp  mexgetarray.cpp  mexlock.cpp  mxgetproperty.cpp  yprime.cpp  yprime.m
examples/matlab/mx/: mxcalcsinglesubscript.cpp  mxcreatecellmatrix.cpp  mxcreatestructarray.cpp  mxcreateuninitnumericmatrix.cpp  mxgeteps.cpp  mxgetinf.cpp  mxisclass.cpp  mxisfinite.cpp  mxisscalar.cpp  mxmalloc.cpp
examples/matlab/refbook/: arrayFillGetPr.cpp  arrayFillGetPrDynamicData.cpp  arrayFillSetComplexPr.cpp  arrayFillSetData.cpp  arrayFillSetPr.cpp  convec.cpp  doubleelement.cpp  matrixDivide.cpp  phonebook.cpp  sincall.cpp  xtimesy.cpp
include/matlabw/mat/: mat.hpp
include/matlabw/mex/: Function.hpp  eval.hpp  io.hpp  memory.hpp  mex.hpp  variable.hpp
include/matlabw/mex/detail/: MException.hpp  include.hpp
include/matlabw/mx/: Array.hpp  ArrayRef.hpp  CellArray.hpp  CellArrayRef.hpp  CharArray.hpp  CharArrayRef.hpp  Exception.hpp  LogicalArray.hpp  NumericArray.hpp  NumericArrayRef.hpp  ObjectArray.hpp  StructArray.hpp  StructArrayRef.hpp  TypedArray.hpp  TypedArrayRef.hpp  common.hpp  limits.hpp  memory.hpp  mx.hpp  propery.hpp  typeTraits.hpp  visit.hpp
include/matlabw/mx/detail/: include.hpp
include/matlabw/mx/gpu/: Array.hpp  NumericArray.hpp  NumericArrayRef.hpp  TypedArray.hpp  TypedArrayRef.hpp  init.hpp
include/mex/: Array.hpp  ArrayRef.hpp  CellArray.hpp  CellArrayRef.hpp  CharArray.hpp  CharArrayRef.hpp  Exception.hpp  Function.hpp  MException.hpp  NumericArray.hpp  NumericArrayRef.hpp  NumericMatrix.hpp  NumericMatrixRef.hpp  ObjectArray.hpp  ObjectArrayRef.hpp  StructArray.hpp  StructArrayRef.hpp  TypedArray.hpp  TypedArrayRef.hpp  common.hpp  eval.hpp  function.hpp  memory.hpp  mex.hpp  propery.hpp  typeTraits.hpp  variable.hpp
include/mex/detail/: MException.hpp  include.hpp  utils.hpp
include/mex/gpu/: Array.hpp  ArrayRef.hpp  NumericArray.hpp  NumericArrayRef.hpp  TypedArray.hpp  TypedArrayRef.hpp
